--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "livewire/livewire": "^2.0"
+        "livewire/livewire": "^2.0",
+        "nesbot/carbon": "^2.50"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -35,7 +36,8 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": ["app/codes.php"]
     },
     "scripts": {
         "post-autoload-dump": [
